css/main.css
img {
    border-radius: 100%;
    box-shadow: 0 0 10px #c2c0c0;
}

body {
    margin: 140px auto; 
    width: 70%;
    background-color: #f8f7f6;
}

ul.topnav {
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
    list-style: none;
    font-weight: bold;
    list-style-type: none;
    text-align: center;
    margin: 0px;
    padding: 0px;
    width: 70%;  
    overflow: auto;
    -webkit-box-shadow: 0px 5px 10px rgba(213, 208, 208, 0.5);
    background-color: #dddddd;
    border: 1px solid #999595;

    top: 50px;
    position: absolute;

}
ul.topnav li {float: left;}
ul.topnav li a{
    text-decoration: none;
    display: block;
    color: #000;
    padding:10px 25px;    
    border-right: 1px solid #bbb;
} 
ul.topnav li a:hover:not(.active) {
     background-color: #555;
     color: white;
}
@media screen and (max-width: 792px) {
    ul.topnav li {
        float: none;
        border-right: none;
        border-bottom: 1px solid #bbb;
    }
    body {
        margin: 290px auto; 
    }
}      
.fixed-header {
    top: -50px;
    position: fixed;
    width: 100%; 
}


ul.topnav a {
    text-decoration: none;
    color: #2b6513;
}
ul.topnav li a.active {
     background-color: green;
     color: white;
}




ul.footbar {
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
    padding: 0px;
    list-style: none;
    font-weight: bold;  
}
ul.footbar li {
    display: inline;
    float: bottom;
    margin-right: 20px;
}
ul.footbar a {
    text-decoration: none;
    color: cornflowerblue;
}
footer {
    border-top: 1px solid #a6a6a6;
    font-size: .8em;
}



h1 {
    font-size: 3em;
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
    color: #454c93
}
p {
    font-size: 1.5em;
    line-height: 1.4em;
    color: #333131;
    text-decoration: none;
}
ul.posts { 
    margin: 20px auto 40px; 
    font-size: 1.5em;  
    text-decoration: none;
}

ul.posts li {
    list-style: none;
    text-decoration: none;
}

